day 1 of the assignment:
- installed and implemented websockets in python 
- got help/assists from AI in terms of what libraries/definitions/or whatever exists within websockets and asyncio
- looked at a video and used it to to help create the server portion of server.py
- adjusted server.py to run until a call to close it
- added try and catch to test for potential errors when connecting from client
- client adjusted to send a message to server to see if connection works
- removed two arguments from echo
- added user input to client
- added way to disconnect from server through input

day 2 of the assignment:
- got even more help from AI in terms of where the code went wrong.
- adjusted client.py and server.py
- ran through the files
- started to work again with pings, even with server noticing what we typed in the server.py from client.py
- pushed origin in to ensure changes