@@ -1,6 +1,7 @@
 day 1 of the assignment:
 - installed and implemented websockets in python 
 - got help/assists from AI in terms of what libraries/definitions/or whatever exists within websockets and asyncio
+
 - looked at a video and used it to to help create the server portion of server.py
 - adjusted server.py to run until a call to close it
 - added try and catch to test for potential errors when connecting from client
@@ -15,3 +16,8 @@ day 2 of the assignment:
 - ran through the files
 - started to work again with pings, even with server noticing what we typed in the server.py from client.py
 - pushed origin in to ensure changes
+
+- undid 2nd argument on echo
+    - only necessary from before version 11 of websockets
+- allow server to differentiate clients and send message from one client to another
+- added connect_clients to keep track of each client that joins
